--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation 'androidx.preference:preference:1.1.1'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
