исправлена работа ретрофита

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".service.MyIntentService"
             android:exported="false" />
 
-        <activity android:name=".WeatherDescription" />
+        <activity android:name=".screens.weather.WeatherDescription" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
