--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     def lifecycle_version = "2.2.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
@@ -60,5 +61,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.firebase:firebase-bom:26.2.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
