--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
